--- a/app/assets/stylesheets/boot-business.css.erb
+++ b/app/assets/stylesheets/boot-business.css.erb
@@ -306,8 +306,7 @@ footer {
   }
 }
 .aU5 {
-    background: url(<%= asset_path 'calendar.png' %>) no-repeat scroll 0px 0px transparent;
-    height: 63px;
+   // background: url(<%= asset_path 'calendar.png' %>) no-repeat scroll 0px 0px transparent;
     position: relative;
     width: 70px;
 }
@@ -319,25 +318,23 @@ footer {
     width: 5%;
 }
 .aRh {
-background: -webkit-linear-gradient(#0F3, #F00);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-    color: rgb(255, 255, 255);
+    z-index: 2;
+    color: white;
     font-size: 14px;
-    top: -3px;
-    left: 3px;
+    top: 12px;
+    left: 7px;
 }
 .aRg {
     color: rgb(34, 34, 34);
-    font-size: 160%;
-    top: 17px;
-    left: 3px;
+    font-size: 85%;
+    top: 9px;
+    left: 7px;
 }
 .aRj {
     color: rgb(34, 34, 34);
-    font-size: 11px;
-    top: 48px;
-    left: 3px;
+    font-size: 13px;
+    top: 32px;
+    left: 7px;
 }
 .aRh, .aRg, .aRj {
     font-weight: bold;
@@ -531,18 +528,15 @@ background: rgba(128, 128, 128, 0.45);
   color: #ffffff;
 }
 
-.featurette-item {
-  margin-bottom: 15px;
-}
 
 .featurette-item > i {
   border: 3px solid #ffffff;
-  border-radius: 50%;
+ /* border-radius: 50%;*/
   display: inline-block;
   font-size: 56px;
   width: 140px;
   height: 140px;
-  line-height: 136px;
+  line-height: 170px;
   vertical-align: middle; 
   text-align: center;
 }
@@ -614,6 +608,7 @@ background: rgba(128, 128, 128, 0.45);
 .wireframe{
 background-color: inherit;
 border-color: inherit;
+border-radius: 0;
 }
 .cover{
 background-size: cover;
@@ -635,12 +630,12 @@ background-color: rgba(236, 240, 241, 0.4);
 .move{
 float: right;
 position: relative;
-top: 20px;
+top: 135px;
 right: 4%;
 }
 .skip_move{
-  float: left;
-  right: -4.5%;
+  float: right;
+  right: 2.5%;
 }
 .up{
 position: relative;
@@ -664,7 +659,7 @@ margin-right: 0.5em;
 font-size: 2em;
 }
 /**from less**/
-.btn-default{margin:1px}.row{margin-left:-15px}.alert-warning{background-color:#fff;border-color:#F39C12;color:#2C3E50}.alert{padding:0;border:0 solid transparent}.alert-dismissable{padding-right:0}.popover-content{word-wrap:break-word}.pager .next>a,.pager .next>span{float:none}footer{color:#fff}.eventHeadclr{font-family:'Lustria', Georgia, serif;font-size:23px;color:#18BC9C}.eventrow1{width:40px}.eventrow2{width:60%;word-wrap:break-word}.eventspc{margin-bottom:0}.eventstr{margin-top:0}.table>tbody>tr>td >{padding-bottom:2px;padding-top:2px}body{padding-top:60px;padding-bottom:40px}.sidebar-nav{padding:9px 0}.dropdown-menu .sub-menu{left:100%;position:absolute;top:0;visibility:hidden;margin-top:-1px}.dropdown-menu li:hover .sub-menu{visibility:visible}.dropdown:hover .dropdown-menu{display:block}.nav-pills .dropdown-menu,.nav-tabs .dropdown-menu,.navbar .dropdown-menu{margin-top:0}.dropdown-toggle li:hover .sub-menu{visibility:visible}.dropdown-toggle:hover .dropdown-menu{display:block}.eventbtn{margin-right:0;margin-left:-16;border-left-width:37px;width:114px;height:23px;border-top-width:0;padding-top:1px}.alert-dismissable .close{width:16px;height:21px}.nav>li>a:focus,.nav>li>a:hover{background-color:#2C3E50}.dropdown-menu {margin: 0px 0 0;}
+.btn-default{margin:1px}.row{margin-left:-15px}.alert-warning{background-color:#fff;border-color:#F39C12;color:#2C3E50}.alert{padding:0;border:0 solid transparent}.alert-dismissable{padding-right:0}.popover-content{word-wrap:break-word}.pager .next>a,.pager .next>span{float:none}footer{color:#fff}.eventHeadclr{font-family:'Lustria', Georgia, serif;font-size:23px;color:#18BC9C}.eventrow1{width:40px}.eventrow2{width:60%;word-wrap:break-word}.eventspc{margin-bottom:0;}.eventstr{margin-top:0}.table>tbody>tr>td >{padding-bottom:2px;padding-top:2px}body{padding-top:60px;padding-bottom:40px}.sidebar-nav{padding:9px 0}.dropdown-menu .sub-menu{left:100%;position:absolute;top:0;visibility:hidden;margin-top:-1px}.dropdown-menu li:hover .sub-menu{visibility:visible}.dropdown:hover .dropdown-menu{display:block}.nav-pills .dropdown-menu,.nav-tabs .dropdown-menu,.navbar .dropdown-menu{margin-top:0}.dropdown-toggle li:hover .sub-menu{visibility:visible}.dropdown-toggle:hover .dropdown-menu{display:block}.eventbtn{margin-right:0;margin-left:-16;border-left-width:37px;width:114px;height:23px;border-top-width:0;padding-top:1px}.alert-dismissable .close{width:16px;height:21px}.nav>li>a:focus,.nav>li>a:hover{background-color:#2C3E50}.dropdown-menu {margin: 0px 0 0;}
 .resp {}.resp1{}.resp2{}.resp3{margin-left: 0px;margin-right: 0px;}
 .what {float: right;}
 .event_title { font-family: 'Lustria', Georgia, serif;color: rgba(248, 131, 5, 0.9) !important;font-size: 23px;}
@@ -679,7 +674,7 @@ height: 288px;
 .label_box {
    margin-bottom: 0px;
     border: 3px solid black;
-    margin: 3px;
+    margin: 2px;
     width: 100% !important;
     height: 80px;
     color: white;
@@ -777,6 +772,7 @@ padding-top: 31px !important;
 .thumbnail {
     position:relative;
     overflow:hidden;
+    border: 2px solid black;
 }
  
 .caption {
@@ -828,8 +824,8 @@ img {
 }
 .label_box {
    margin-bottom: 0px;
-    border: 3px solid black;
-    margin: 3px;
+    border: 2px solid black;
+    margin: 2px;
     width: 100%;
     height: 120px;
     color: white;
@@ -841,8 +837,8 @@ img {
     width: 18%;
     height: 120px;
 }
-label:hover{
-    border: 3px solid white;
+.label_box:hover {
+ border: 2px solid white;
 }
 img:hover {
   filter: none; /* IE6-9 */
@@ -899,7 +895,7 @@ font-family: 'Lustria', Georgia, serif;
 .slide_edit{
     width: 100% ;
   height: 100%; ;
-  min-height: 250px;
+  min-height: 325px;
 }
 .input-lg{
   height: 50px;
@@ -908,8 +904,38 @@ font-size: 18px;
 line-height: 1.33;
 border-radius: 0px;
 }
-.background{
+.campus-background{
   padding: 6em 0 2em;
-  background: url(<%= asset_path 'assets/slide-7.jpg' %>);
+  background: url("<%= image_path 'slide-7.jpg'%>");
   background-size: cover;
 }
+.group-background{
+  padding: 6em 0 2em;
+  background: url("<%= image_path 'slide-7.jpg'%>");
+  background-size: cover;
+}
+.home-background{
+  padding: 6em 0 2em;
+  background: url("<%= image_path 'slide-5.jpg'%>");
+  background-size: cover;
+}
+.white{
+  color: white;
+}
+.adjust{
+top: 34px;
+position: relative;
+
+}
+/* Fade transition for carousel items */
+.carousel .item {
+  position: relative;
+    -webkit-transition: 1.6s ease-in-out left;
+    -moz-transition: 1.6s ease-in-out left;
+    -o-transition: 1.6s ease-in-out left;
+    transition: 1.6s ease-in-out left;
+}
+.fa_move{
+  width: 1em !important;
+}
+
