--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -84,10 +84,10 @@
                         </br>
                          <div id="form-group">
                          
-                          <label class="col-lg-3 control-label">Website</label>
+                          <label class="col-lg-3 control-label">Website(optional)</label>
                           
                         <div class="col-lg-9">
-                         <%= u.url_field :web,class: 'form-control',:placeholder => "include http:// before" %><br>
+                         <%= u.url_field :web,class: 'form-control',:placeholder => "www.example.com (optional)" %><br>
                         </div>
                      
                       </div>
@@ -97,33 +97,38 @@
              <label class="col-lg-3 control-label">Short Event Description</label>
                         <div class="col-lg-9">
                         
-                 <%= u.text_area :short_description,class: 'form-control',placeholder: "max. 140 characters." %>   
+                 <%= u.text_area :short_description,class: 'form-control',placeholder: "Max limit: 140 characters" %>   
                 <div id='counter'>140</div>
                         </div>
                         </div>
+                        
                         <div id="form-group">
                          
                           <label for="url" class="col-lg-3 control-label">Contact Details</label>
-                        <div class="col-lg-9 widthLong">
-                        <%= u.text_field :contact_name,class: 'form-control',placeholder: 'Name' %>
+                        <div class="col-lg-9">
+                          <div class="panel-group" id="accordion">
+                           <div class="panel panel-default">
+                            <div class="panel-heading">
+                              <a class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" >
+                                  Add Contact Details
+                                </a>
+                              </a>
+                            </div>
+                        <div id="collapseOne" class="panel-collapse collapse">
+                          <div class="panel-body">
+                             <%= u.text_field :contact_name,class: 'form-control',placeholder: 'Name' %>
                         <%= u.text_field :contact_phone,class: 'form-control',placeholder: 'mobile no.' %>
                         <%= u.email_field :email,class: 'form-control',placeholder:'Email Id' %>
+                       </div>
+                    </div>
+  </div>
+  </div>
+                       
                           </div>
                         </div> 
                          
-                         <div id="form-group">
-                         
-                          <label for="url" class="col-lg-3 control-label">Region</label>
-                    
-                        <div class="col-lg-9">
-                          <label style="float:left;padding:8px 20px 8px 0;font-size:14px;" class="col-lg-3 control-label" >
-                            <input name="region" value="india" id="region_india" checked="checked" tabindex="2" type="radio">
-                            India</label>
-                          
-                           
-                        </div>
-                    
-                      </div>
+                         <br>
                       <div id="form-group">
                          
                           <label class="col-lg-3 control-label">Event Logo</label>
@@ -136,22 +141,22 @@
                       
                 <div class="col-lg-6">       
                           
-                      <!--Domains--><div id="form-group">
-                         <br>
-                          <label class="col-lg-3 control-label">Event Reach</label>
+                      <!--Domains--><div class="row" id="form-group">
+                         
+                          <label class="col-lg-2 control-label">Event Reach</label>
                        
-                        <div class="col-lg-9">
-         <%= u.collection_select(:reach_id, Reach.all, :id,:name,include_blank: "Choose") do |b|
+                        <div class="col-lg-10">
+         <%= u.collection_select(:reach_id, Reach.all, :id,:name,{prompt: "Select event reach"},{class: "form-control"}) do |b|
                           b.label(class:"btn btn-default category") { b.check_box(class: "hide") + b.text } end %>  
                         <%#link_to"Add your own event reach",rails_admin.new_path('Reach'),target: '_blank' %> 
                         </div>
                         
                       </div>
-                     <br>
+                     
                       
-                      <div id="form-group">
+                      <div class="row" id="form-group">
                          <br>
-                          <label class="col-lg-2 control-label">Domains</label>
+                          <label class="col-lg-2 control-label">Event Type</label>
                        
                         <div class="col-lg-10">
        <%= u.collection_check_boxes(:domain_ids, Domain.all, :id, :name) do |b|
@@ -163,9 +168,9 @@
                       </div>
                      <br>
                       <!--Categories-->
-                      <div id="form-group">
+                      <div class="row" id="form-group">
                       <br>
-                          <label class="col-lg-2 control-label">Categories</label>
+                          <label class="col-lg-2 control-label">Topics</label>
                         <div class="col-lg-10">
                <%= u.collection_check_boxes(:category_ids, Category.all, :id, :name) do |b|
                           b.label(class:"btn btn-default category") { b.check_box(class: "hide") + b.text }
@@ -175,7 +180,7 @@
                       </div>
                       <br>
                       <!--Eligibility-->
-                      <div id="form-group">
+                      <div class="row" id="form-group">
                          <br>
                           <label class="col-lg-2 control-label">Eligibility</label>
                         <div class="col-lg-10">
@@ -193,7 +198,7 @@
                       <!--Competitions Details-->
                      
                     <div class ="col-lg-9">
-                     <div id="form-group">
+                     <div class="row" id="form-group">
                          
                           <label class="col-lg-2 control-label">Event Details<br>(For Event Page)</label>
                           
