--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-<div class="splash">
+<div class="splash group-background">
 <h1 class="fontedits"><%= @campus.name %></h1>
 <h2 class="fontedits"><%= @group.name %></h1>
 </div>
