--- a/app/views/static_pages/_slider.html.erb
+++ b/app/views/static_pages/_slider.html.erb
@@ -1,5 +1,5 @@
     <div class='col-md-12'>
-      <div class="carousel slide media-carousel slide_edit" id="media">
+      <div class="carousel slide media-carousel slide_edit center" id="media" data-pause="true">
         <div class="carousel-inner">
           <div class="item active">
             <div class="row">
@@ -23,7 +23,8 @@
           </div>
           <div class="item">
             <div class="row">
-              <%= collection_check_boxes(nil,:domain_ids, Domain.all.limit(12).to_a, :id, :name) do |b|
+             <%= render partial: "shared/group", collection: @domains.limit(12) %>
+              <%# collection_check_boxes(nil,:domain_ids, Domain.all.limit(12).to_a, :id, :name) do |b|
                   b.label(class: "label_box",style:"background: url(
             #{Domain.find(b.value).image_url}) ;"){ b.check_box(class: "hide") + b.text}
                         end %>  
