--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,9 +1,7 @@
 <p>Welcome <%= @email %>!</p>
 
-<!--<p>You can confirm your account email through the link below:</p>-->
+<p>You can confirm your account email through the link below:</p>
 
-<p>We will keep you posted about the latest updates</p>
+<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @token) %></p>
 
-<!--<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @token) %></p>-->
-
-<p><%= link_to 'Demo Version', demo_url %></p>
+<p><%# link_to 'Demo Version', demo_url %></p>
