--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -37,13 +37,12 @@
             <h4>Get in touch</h4>
             <div class="social-icons-row">
               <a href="https://twitter.com/kampusbee"><i class="fa fa-twitter"></i></a>
-              <a href="https://www.facebook.com/pages/Kampusbeecom/620695481313043?fref=ts"><i class="icon-facebook"></i></a>
-              <a href="#"><i class="fa fa-google-plus"></i></a>             <a href="mailto:kampusbee@gmail.com"><i class="icon-envelope"></i></a>                            
+              <a href="https://www.facebook.com/pages/Kampusbeecom/620695481313043?fref=ts"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-google-plus"></i></a>            
+               <a href="mailto:kampusbee@gmail.com"><i class="fa fa-envelope"></i></a>                            
             </div>
             
-            <div class="social-icons-row">
-              <i class="fa fa-phone phone-number"></i> +918884056308
-            </div>
+            
           </div>      
           <div class="col-lg-3">
            <!--- <h4>Get updated by email</h4>
