--- a/app/views/shared/_group.html.erb
+++ b/app/views/shared/_group.html.erb
@@ -1,7 +1,11 @@
-
-<div class="col-lg-2">
+<div class="col-xs-6 col-sm-6 col-lg-2">
 <a href="<%=refresh_path(topic_ids: group.id)%>">
-<label class ="label_box" style="background: url(<%=group.image_url if group.image_url%>)"><span><%=group.name%></span>
-</label>
+<div class="featurette-item white">
+		<div class="adjust"><%=group.name%></div>
+          <i class="fa <%=group.image_url%>"></i>
+     
+
+        </div>
+
 </a>
 </div>
