--- a/app/views/static_pages/_event.html.erb
+++ b/app/views/static_pages/_event.html.erb
@@ -1,7 +1,7 @@
 <title></title>
 <div class="alert alert-dismissable alert-warning eventspc">
   <button type="button" class="close" data-dismiss="alert">X</button>
-    <table class ="table table-striped table-hover eventspc" style="table-layout: fixed;">
+    <table class ="table table-striped table-hover eventspc border" style="table-layout: fixed;">
       <tbody>
         <tr>
     <!-=================================first column===========================================->
@@ -17,7 +17,7 @@
                     <%= link_to share_event_path(event, type: "share"), method: :put,:class => "btn btn-primary btn-xs" do %><i class="icon icon-share">Bee it!</i> 
                       <% end %>
                     <% end %></p>
-                      <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-lang="en" data-text="<%=event.title %>" data-hashtags="<%=event.organizer%>" data-url="http://kampusbee.com/events/<%=event.id%>" data-count="none"  data-via="<%=event.venue%>,<%= event.location%>">Tweet</a>
+                      <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-lang="en" data-text="<%=event.title %>" data-hashtags="<%=event.organizer%>" data-url="http://kampusbee.com/events/<%=event.id%>" data-count="none"  data-via="<%=event.venue%>,<%= event.campus.name%>">Tweet</a>
               </div>               
                 <% if event.avatar.present?%>
                   <%= image_tag event.avatar.url, size: "160x100"%>
@@ -62,7 +62,7 @@
           <% else %>
           <%= link_to favorite_event_path(event, type: "favorite"), {method: :put,title: "favorite"} do  %><i class="fa fa-star-o" style="color: rgba(0, 0, 0, 0.74);"></i><% end %>
          <% end %>    
-          <%= link_to event.title,event,class: "event_title" %> <br> <i class="fa fa-users"></i>  <%=event.organizer%>
+          <%= link_to event.title,event,class: "event_title" %> <br> <i class="fa fa-users"></i> <%=event.organizer%>
       </div> 
       <div class="thumbnail">
         <div class="caption">
@@ -80,7 +80,7 @@
         <% end %>
     <% end %>  
     <button type="button" class="btn btn-primary btn-xs" data-container="body" data-toggle="popover" data-placement="top" data-content="<%=event.short_description%>" data-original-title="" title=""><div class="tour_6"><i class="icon icon-eye-open"></i> What!?</div></button>
-    <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-lang="en" data-text="<%=event.title %>" data-hashtags="<%=event.organizer%>" data-url="http://kampusbee.com/events/<%=event.id%>" data-count="none"  data-via="<%=event.venue%>,<%= event.location%>" >Tweet</a>         
+    <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-lang="en" data-text="<%=event.title %>" data-hashtags="<%=event.organizer%>" data-url="http://kampusbee.com/events/<%=event.id%>" data-count="none"  data-via="<%=event.venue%>,<%= event.campus.name%>" >Tweet</a>         
         </p>
           
     </div>
@@ -95,7 +95,12 @@
            <!-==================-Resposive design ends=======================->
            <!-==============---Third column----==============------> 
   <td class = "aRi" width="20%">          
-    <div class="aU5"><span class="aRh"><%=event.sdatetime.strftime("%b") %></span><span class="aRg"><%=event.sdatetime.day %></span><span class="aRj"><%=event.sdatetime.strftime("%a") %></span></div>
+    <div class="aU5"><span class="aRh"><%=event.sdatetime.strftime("%b") %></span>
+    <span class="fa-stack fa-3x fa_move">
+  <i class="fa fa-calendar-o fa-stack-2x"></i>
+  <span class="aRg"><%=event.sdatetime.day %></span><span class="aRj"><%=event.sdatetime.strftime("%a") %></span>
+  </span>
+  </div>
       <div class="tour_5"> 
         <div class="thumbnail">       
           <a href="#" class=" btn btn-primary btn-sm" >
