admin_panel_issues

--- a/app/views/admin/_event.html.erb
+++ b/app/views/admin/_event.html.erb
@@ -32,7 +32,7 @@
             <!-------------------thrid column---------->
     <td class="eventrow2"><%=event.sdatetime.strftime("%d %b %I:%M %p")%> - <%=event.edatetime.strftime("%d %b %I:%M %p")%></td></tr>
     <tr><td class="eventrow1"><b>Where</b></td><td class="eventrow2">
-    <%=event.venue%>,<%=event.location%>
+    <%=event.venue%>,<%=event.campus.name%>
     </td></tr>
     <tr><td colspan="2">  
     <div class="tour_7"> </div>
